--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -45,6 +45,16 @@ input[type="submit"] {
   color: white;
 }
 
+div.signin {
+  border: 2px solid #6ECCFF;
+  padding: 2px 4px;
+  width: 170px;
+  position: relative;
+  left: 50%;
+  margin-left: -85px;
+  margin-top: 150px;
+}
+
 div.page {
   background: white;
   border: 1px solid #6ECCFF;
