--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -45,6 +45,18 @@ input[type="submit"] {
   color: white;
 }
 
+input[name="otherPlayer"]{
+  background: white !important;
+  border: 1px solid #FFFFFF !important;
+  padding: 1px 3px;
+  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 14px;
+  font-weight: bold;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  color: Black;
+}
+
 div.signin {
   padding: 2px 4px;
   width: 170px;
