--- a/src/main/resources/public/css/game.css
+++ b/src/main/resources/public/css/game.css
@@ -123,12 +123,16 @@ table#game-board td > div[data-type="SINGLE"][data-color="RED"] {
 }
 table#game-board td > div[data-type="KING"][data-color="RED"] {
   background-image: url("../img/king-piece-red.svg");
+  margin-left: auto;
+  margin-right: auto;
 }
 table#game-board td > div[data-type="SINGLE"][data-color="WHITE"] {
   background-image: url("../img/single-piece-white.svg");
 }
 table#game-board td > div[data-type="KING"][data-color="WHITE"] {
   background-image: url("../img/king-piece-white.svg");
+  margin-left: auto;
+  margin-right: auto;
 }
 table#game-board td.pending {
   animation: background-fades;
