--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -125,7 +125,7 @@ div.page div.footer {
  */
 div.ERROR {
   margin: 10px 0;
-  background: #FAE4E4;
+  background: #bdb83c;
   border: 1px solid #DD6F6F;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
